--- a/md/05.md
+++ b/md/05.md
@@ -28,7 +28,7 @@ peso = 34.67
 precio = 242.9943
 ```
 
-•            Negativos: Los números menores que 0 se expresan con un guión por delante: -4, -5, -3.1415,...
+- Negativos: Los números menores que 0 se expresan con un guión por delante: -4, -5, -3.1415,...
 
 ```Python
 nota = -5
@@ -51,7 +51,7 @@ novia = 'Solo quiero que seamos "amigos"'
 
 En el caso del texto, podemos meter una serie de caracteres especiales que nos permiten efectos interesantes. Esos caracteres se escriben con una contra-barra o backslash por delante:
 
-•            Salto de linea Esto añade un salto de línea al texto si este se muestra por pantalla:
+- Salto de linea Esto añade un salto de línea al texto si este se muestra por pantalla:
 
 ```Python
 frase = "Hola,\n qué tal"
@@ -73,10 +73,10 @@ fui a los coches
 de choque"""
 ```
 
-•            Tabulaciones Esto añade una tabulación (varios espacios) al texto si este se muestra por pantalla:
+• Tabulaciones Esto añade una tabulación (varios espacios) al texto si este se muestra por pantalla:
 
 ```Python
-frase = "NombretApellidotEdad"
+frase = "Nombre\tApellidotEdad"
 ```
 
 se mostrará así:
@@ -87,13 +87,13 @@ Nombre  Apellido   
 
 Otros caracteres especiales:
 
-•             Para mostrar la contra-barra en un texto.
+-  `\\` Para mostrar la contra-barra en un texto.
 
-•            " Para mostrar una comilla doble en un texto.
+- `\"` Para mostrar una comilla doble en un texto.
 
-•            ' Para mostrar una comilla simple en un texto.
+- `\'` Para mostrar una comilla simple en un texto.
 
-•            a Para hacer sonar un pitido.
+- `\a` Para hacer sonar un pitido.
 
 5.3  Booleanos
 --------------
