--- a/md/06.md
+++ b/md/06.md
@@ -141,10 +141,10 @@ texto = "Mi edad es " + str(valor)
 
 Por tanto, hay ocasiones en los que tendremos que convertir un valor en determinado tipo. Las funciones para convertir son las siguientes:
 
-*   str(): convierte un valor a texto. str(5) devolvería "5".
-*   int(): convierte un valor a número entero. int("5") devolvería 5.
-*   float(): convierte un valor a número con decimales. float("5.5") devolvería 5.5
-*   bool(): convierte un valor a un booleano. bool("False") devolvería False.
+*   `str()`: convierte un valor a texto. `str(5)` devolvería `"5"`.
+*   `int()`: convierte un valor a número entero. `int("5")` devolvería `5`.
+*   `float()`: convierte un valor a número con decimales. `float("5.5")` devolvería `5.5`
+*   `bool()`: convierte un valor a un booleano. `bool("False")` devolvería `False`.
 
 ¡OJO!
 
