--- a/md/07.md
+++ b/md/07.md
@@ -14,14 +14,12 @@ chicles = chicles + 2
 ```
 
 El programa calcula que de tener 4 chicles, has pasado a tener 6. Las operaciones básicas en programación son:
-
-- suma: +
-
-- resta: -
-
-- multiplicación: *
-
-- división: /
+|Operador||
+|--|--|
+|suma|`+`|
+|resta|`-`|
+|multiplicación|`*`|
+|división|`/`|
 
 Por ejemplo para calcular el total de segundos que tiene un día:
 
@@ -29,9 +27,9 @@ Por ejemplo para calcular el total de segundos que tiene un día:
 minutos = 60
 segundos = 60
 horas = 24
-```
 
 totalSegundos = segundos * minutos * horas
+```
 
 Puedes hacer operaciones tan complejas como hagan falta. Para que estas sean más fáciles de leer se pueden utilizar paréntesis como se hace en mates:
 
@@ -166,17 +164,14 @@ El resultado sería True.
 
 Los operadores de comparación serían:
 
-•            Igual: ==
-
-•            Distinto: !=
-
-•            Mayor que: >
-
-•            Menor que: <
-
-•            Mayor o igual: >=
-
-•            Menor o igual: <=
+|Operador |Significado|
+|--|--|
+|`==`|Igual|
+|`!=`|Distinto|
+|`>`|Mayor que|
+|`<`|Menor que|
+|`>=`|Mayor o igual|
+|`<=`|Menor o igual|
 
 También puede utilizarse este operador con texto, tanto para comprobar la igualdad:
 
