--- a/md/10.md
+++ b/md/10.md
@@ -1,11 +1,9 @@
 10         Estructuras de datos
 ===============================
 
-![](e20514ca-a096-442d-8ee5-3f2997bc2ec72106301532469382130.016.jpeg)
-
-![](e20514ca-a096-442d-8ee5-3f2997bc2ec72106301532469382130.016.jpeg)
-
-![](e20514ca-a096-442d-8ee5-3f2997bc2ec72106301532469382130.016.jpeg)
+|0|1|2|
+|--|--|--|
+|![](e20514ca-a096-442d-8ee5-3f2997bc2ec72106301532469382130.016.jpeg)|![](e20514ca-a096-442d-8ee5-3f2997bc2ec72106301532469382130.016.jpeg)|![](e20514ca-a096-442d-8ee5-3f2997bc2ec72106301532469382130.016.jpeg)|
 
 Hasta ahora hemos estado jugando con datos simples, variables que contienen un número, un texto, etc. Pero existen otros tipos que nos permiten crear datos más complejos. No es que sean difíciles, simplemente pueden contener algo más que un simple número.
 
