--- a/md/11.md
+++ b/md/11.md
@@ -77,7 +77,7 @@ texto.upper() # PROFESORA ADA
 texto.lower() # Profesora Ada
 ```
 
-También tenemos una función llamada title(), la cual cambia cada palabra dentro de un texto, poniendo la primera letra en mayúsculas.
+También tenemos una función llamada `title()`, la cual cambia cada palabra dentro de un texto, poniendo la primera letra en mayúsculas.
 
 ```Python
 texto = "esto es una frase"
@@ -87,14 +87,14 @@ texto.title() # Esto Es Una Frase
 11.3 split: de texto a lista
 ----------------------------
 
-split es una interesante función que parte un texto en cachos y lo convierte en una lista:
+`split` es una interesante función que parte un texto en cachos y lo convierte en una lista:
 
 ```Python
 texto = "ven conmigo si quieres vivir"
 palabras = texto.split() # ["ven", "conmigo", "si", "quieres", "vivir"]
 ```
 
-Por defecto el corte del split se hace en los espacios del texto. Pero se puede indicar cualquier otro separador, por ejemplo el punto y coma ;:
+Por defecto el corte del split se hace en los espacios del texto. Pero se puede indicar cualquier otro separador, por ejemplo el punto y coma `;`:
 
 ```Python
 texto = "Ada;Neko;Bug"
@@ -104,7 +104,7 @@ nombres = texto.split(";") # ["Ada", "Neko", "Bug" ]
 11.4 Búsquedas
 --------------
 
-En ocasiones nos interesará buscar una palabra dentro de un texto. Para eso podemos usar la función find. En caso de encontrar la palabra, muestra la posición en la que se empieza esa palabra. Si no lo encuentra, devuelve -1.
+En ocasiones nos interesará buscar una palabra dentro de un texto. Para eso podemos usar la función find. En caso de encontrar la palabra, muestra la posición en la que se empieza esa palabra. Si no lo encuentra, devuelve `-1`.
 
 ```Python
 palabras = "La mejor profesora es Ada, sin duda"
@@ -134,21 +134,21 @@ acaba = palabras.startswith("ajes") # False
 
 Los textos pueden empezar o terminar con espacios en blanco u otros caracteres que quizá nos interese eliminar, como los saltos de línea. Para quitar esas partes sobrantes de un texto, se pueden usar las siguientes funciones.
 
-Con lstrip() se eliminan los espacios al inicio del texto:
+Con `lstrip()` se eliminan los espacios al inicio del texto:
 
 ```Python
 texto = "  Tengo espacios      "
 limpio = texto.lstrip() # "Tengo espacios      "
 ```
 
-Con rstrip() se eliminan los espacios al inicio del texto:
+Con `rstrip()` se eliminan los espacios al inicio del texto:
 
 ```Python
 texto = "  Tengo espacios      "
 limpio = texto.rstrip()  # "  Tengo espacios"
 ```
 
-Y con strip() quitamos los espacios de ambos lados:
+Y con `strip()` quitamos los espacios de ambos lados:
 
 ```Python
 texto = "  Tengo espacios      "
@@ -172,7 +172,7 @@ limpio = texto.rstrip("n")
 11.6 Ejercicios propuestos
 --------------------------
 
-### 11.6.1                       Ejercicio 3.0
+### 11.6.1 Ejercicio3.0
 
 Escribe un programa que inicie una lista de 5 números (iniciados a 0), otro de 5 nombres iniciados a mano y otro de valores 5 booleanos (iniciados a false)
 
@@ -194,7 +194,7 @@ Resultado:
 [True, True, True, True, True]
 ```
 
-### 11.6.2                       Ejercicio 3.1
+### 11.6.2 Ejercicio3.1
 
 Escribe un programa que defina una lista de 10 números. Luego debe crear un bucle que en las posiciones pares meta un 0.
 
@@ -214,7 +214,7 @@ Resultado:
 [0, 2, 0, 4, 0, 6, 0, 8, 0, 10]
 ```
 
-### 11.6.3                       Ejercicio 3.2
+### 11.6.3 Ejercicio3.2
 
 Escribe un programa para gestionar una lista, que muestre al usuario un menú con 4 opciones: (1) meter elemento, (2) eliminar, (3) mostrar y (4) salir. El menú debe mostrarse mientras el usuario no meta la opción 4. Si elige la opción 1, se hace push de un valor cualquiera, si elige 2 se hace pop, si elige 3 se muestra el contenido dla lista.
 
@@ -254,7 +254,7 @@ Elige opción: 3
 []
 ```
 
-### 11.6.4                       Ejercicio 3.3
+### 11.6.4 Ejercicio3.3
 
 Escribe un programa que solicite palabras al usuario y las vaya concatenando para construir una frase, hasta que el usuario escriba un punto (.). Entonces el programa deberá mostrar la frase creada. Si el usuario no escribe nada, no se debe concatenar nada.
 
@@ -281,7 +281,7 @@ Escribe una palabra: .
 Hola qué tal
 ```
 
-### 11.6.5                       Ejercicio 3.4
+### 11.6.5 Ejercicio3.4
 
 Escribe un programa que solicite al usuario su nombre, su lugar de nacimiento y su año de nacimiento. Luego debe mostrar una frase con toda esa información utilizando la interpolación o plantillas de cadenas.
 
@@ -304,7 +304,7 @@ Escribe tu año de nacimiento: 2006
 Te llamas Ada naciste en Teverga en 2006
 ```
 
-### 11.6.6                       Ejercicio 3.5
+### 11.6.6 Ejercicio3.5
 
 Escribe un programa que solicite al usuario una frase. Luego debe solicitar una palabra de esa frase, y como resultado, el programa devolverá la misma frase con esa palabra en mayúsculas:
 
@@ -332,7 +332,7 @@ Escribe una palabra de esa frase: buena
 Qué BUENA es la profa Ada
 ```
 
-### 11.6.7                       Ejercicio 3.6
+### 11.6.7 Ejercicio3.6
 
 Crea un programa que defina una lista de 5 nombres y luego utilice un bucle para mostrar los nombres de uno en uno.
 
@@ -357,7 +357,7 @@ Pip
 Bilbo
 ```
 
-### 11.6.8                       Ejercicio 3.7
+### 11.6.8 Ejercicio3.7
 
 Crea un programa que defina una lista de 10 números enteros. Luego crea otro bucle que calcule que incremente en uno cada uno de los elementos y los muestre.
 
@@ -379,7 +379,7 @@ Resultado:
 [4, 6, -3, 3, 2, 5, 1, 7, 10, 9, 4]
 ```
 
-### 11.6.9                       Ejercicio 3.8
+### 11.6.9 Ejercicio3.8
 
 Crea un programa que defina una lista de 10 números enteros Luego crea un bucle que determine si en la lista hay algún elemento repetido. Con que encuentre uno repetido es suficiente.
 
