--- a/md/12.md
+++ b/md/12.md
@@ -29,7 +29,7 @@ Lo cual mostrará:
 Hola
 ```
 
-### 12.1.1                       Ejercicio 4.0
+### 12.1.1 Ejercicio4.0
 
 Escribe un programa con tres funciones llamadas días, tardes y noches. Cada una debe mostrar un saludo distinto, "Buenos días", "Buenas tardes" y "Buenas noches" respectivamente. Añade las llamadas de a las tres funciones.
 
@@ -82,7 +82,7 @@ Hola Neko
 Hola Ada
 ```
 
-### 12.2.1                       Ejercicio 4.1
+### 12.2.1 Ejercicio4.1
 
 Escribe un programa con una función llamada cuadrado que tenga un parámetro a. La función debe multiplicar a * a y mostrar el resultado por pantalla.
 
@@ -162,7 +162,7 @@ sumar(2, 45)   # 47
 ```
 
 
-### 12.2.4                       Ejercicio 4.2
+### 12.2.4 Ejercicio4.2
 
 Escribe un programa con una función llamada unir que reciba parámetros indefinidos o dinámicos. La función unir debe tomar los parámetros y retornar un texto con todos ellos formando una frase.
 
@@ -316,7 +316,7 @@ Y finalmente se llamará a print y veremos el resultado:
 3
 ```
 
-### 12.4.1                       Ejercicio 4.4
+### 12.4.1 Ejercicio4.4
 
 Escribe dos funciones. Una que reciba un número y devuelva el mismo número en positivo.
 
@@ -375,11 +375,11 @@ Hasta ahora hemos visto programas que son una simple secuencia de órdenes, las 
 
 Eso está bien cuando los programas son simples y tienen que hacer pocas cosas, pero cuando el programa tiene que hacer algo más complejo es muy probable que tengas que usar funciones, por varios motivos.
 
-### 12.5.1                       Motivo 0: divide y vencerás
+### 12.5.1 Motivo 0: divide y vencerás
 
 Los programas tratan de resolver problemas ofreciendo una solución. En ocasiones los problemas pueden ser muy complejos de afrontar. Las funciones te permiten abordar esos problemas por partes. Cada función te puede dar la solución para una parte del problema. Por lo tanto, puedes dividir el problema en muchos pequeños problemas y solucionar cada problema con una función. Escribir el código en funciones es el primer paso que te permitirá diseñar programas más complejos.
 
-### 12.5.2                       Motivo 1: no repetir el código
+### 12.5.2 Motivo 1: no repetir el código
 
 Si tu programa tiene que hacer alguna cosa varias veces, tendrías que repetir el código tantas veces como fuera necesario. Imagina que tienes que recibir varios datos del usuario, y que cada vez que lo haces tienes que comprobar que el dato no está vacío:
 
@@ -398,7 +398,7 @@ Nota:
 
 NO repetir el código es una de las reglas más importantes que debe seguir todo buen programador. Incluso puedes aplicar la regla del 3: a la tercera vez que tengas que repetir algo, tienes que automatizarlo.
 
-### 12.5.3                       Motivo 2: reutilizar código
+### 12.5.3 Motivo 2: reutilizar código
 
 Además de no repetir el código, una función nos permite que un mismo código sirva para distintos tipos de datos. ¡Para eso se utilizan los parámetros!
 
@@ -424,11 +424,11 @@ Holi
 Aupa
 ```
 
-### 12.5.4                       Motivo 3: facilitar el mantenimiento
+### 12.5.4 Motivo 3: facilitar el mantenimiento
 
 Si el código está en un único sitio, es más fácil corregirlo, cambiarlo, mejorarlo y mantenerlo en general. Crear un programa desde cero es muy bonito, pero el verdadero trabajo es mantener el código a lo largo del tiempo. Si tenemos nuestras funciones bien definidas, nos ahorraremos muuuuucho trabajo.
 
-### 12.5.5                       Motivo 4: permite hacer tests
+### 12.5.5 Motivo 4: permite hacer tests
 
 Quizá seas un poco joven para esto, pero las verdaderas pros como yo testeamos nuestros programas. ¿Qué significa eso? Que escribimos programas cuya única función es comprobar que nuestros programas hacen lo que deben. Si tu código tiene funciones, podrás escribir tests para comprobar que esas funciones hacen lo que deben.
 
@@ -506,7 +506,9 @@ Operación desconocida
 
 ### 12.7.3 Ejercicio 4.2
 
-`def saludo(momentoDelDia)` Esta función recibe como parámetro un momento del día: "mañana", "tarde" o "noche" y debe devolver el correspondiente saludo: "Buenos días", "Buenas tardes", y "Buenas noches" respectivamente.
+`def saludo(momentoDelDia)`
+
+Esta función recibe como parámetro un momento del día: "mañana", "tarde" o "noche" y debe devolver el correspondiente saludo: "Buenos días", "Buenas tardes", y "Buenas noches" respectivamente.
 
 ```Python
 def saludo (momento):
@@ -536,7 +538,7 @@ Buenas tardes
 
 ### 12.7.4 Ejercicio 4.3
 
-def iniciarConNumero (numeros, numero)
+`def iniciarConNumero (numeros, numero)`
 
 Esta función debe iniciar todos los elementos del array números con el número que pasamos como parámetro.
 
@@ -562,7 +564,9 @@ Resultado:
 
 ### 12.7.5 Ejercicio 4.4
 
-`def aleatorio (max)` Esta función debe devolver un número aleatorio entre 0 y el valor máximo que se pasa como parámetro.
+`def aleatorio (max)`
+
+Esta función debe devolver un número aleatorio entre 0 y el valor máximo que se pasa como parámetro.
 
 ```Python
 import random
@@ -581,7 +585,7 @@ Resultado:
 
 ### 12.7.6 Ejercicio 4.5
 
-def generarNombre (silabas)
+`def generarNombre (silabas)`
 
 Una función que dado un número de sílabas genere un nombre (alternar consonantes y vocales) aleatorio. Puedes utilizar la función del ejercicio anterior.
 
@@ -650,7 +654,7 @@ _!5_flg$
 
 ### 12.7.8 Ejercicio 4.7
 
-Crea una función llamada factura(productos, cantidades, precios) que recibe tres arrays del mismo tamaño con los siguientes contenidos:
+Crea una función llamada `factura(productos, cantidades, precios)` que recibe tres arrays del mismo tamaño con los siguientes contenidos:
 
 1. productos: nombres de productos.
 
