--- a/md/16.md
+++ b/md/16.md
@@ -1,5 +1,5 @@
 
-16         Librerías
+16 Librerías
 ====================
 
 ![](e20514ca-a096-442d-8ee5-3f2997bc2ec72106301532469382130.022.jpeg)
@@ -33,7 +33,7 @@ resultado = mates.sumar(valor1, valor2)
 print(resultado)  # 15
 ```
 
-### 16.1.1                       Ejercicio 6.0
+### 16.1.1 Ejercicio6.0
 
 En un ejercicio anterior, se proponía hacer un generador de contraseñas. Utiliza el mismo código pero créalo dentro de un fichero. Crea otro fichero donde debes importar ese código y utilizarlo.
 
@@ -74,7 +74,7 @@ Resultado:
 g3ep-ahx
 ```
 
-Con las clases se puede hacer exactamente lo mismo. Supongamos que tenemos una clase llamada LectorPantalla en un fichero llamado lector_pantalla.py. Es una clase que nos permite leer datos desde la consola:
+Con las clases se puede hacer exactamente lo mismo. Supongamos que tenemos una clase llamada `LectorPantalla` en un fichero llamado `lector_pantalla.py`. Es una clase que nos permite leer datos desde la consola:
 
 ```Python
 class LectorPantalla:
@@ -106,15 +106,15 @@ Introduce un número: 6
 7
 ```
 
-### 16.1.2                       Ejercicio 6.1
+### 16.1.2 Ejercicio6.1
 
 Define una clase llamada Menu que tenga las siguientes funciones:
 
-- def init__(self): recibe como parámetro una lista de opciones (strings).
+- `def init__(self)`: recibe como parámetro una lista de opciones (strings).
 
-- def mostrar (self): muestra las opciones precedidas de un número llamando a print.
+- `def mostrar (self)`: muestra las opciones precedidas de un número llamando a `print`.
 
-- def seleccionar(self, numero): devuelve True si el número seleccionado está en el menú, en caso contrario devuelve False. Luego importa esa clase en el fichero 2.py y utilízala.
+- `def seleccionar(self, numero)`: devuelve `True` si el número seleccionado está en el menú, en caso contrario devuelve `False`. Luego importa esa clase en el fichero `2.py` y utilízala.
 
 Fichero menu.py:
 
@@ -159,13 +159,13 @@ Opción 1 presente
 
 ### 16.2.1 Ejercicio 6.0
 
-Crea una clase llamada Fichero con las siguientes funciones:
+Crea una clase llamada `Fichero` con las siguientes funciones:
 
-- def __init__(self, fichero): recibe como parámetro el fichero a abrir.
+- `def __init__(self, fichero)`: recibe como parámetro el fichero a abrir.
 
-- def leer(self): devuelve una cadena con el contenido del fichero.
+- `def leer(self)`: devuelve una cadena con el contenido del fichero.
 
-- def escribir(self, contenido): escribe en el fichero el contenido que se le pasa como parámetro. Luego debes utilizar la clase importándola en otro fichero.
+- `def escribir(self, contenido)`: escribe en el fichero el contenido que se le pasa como parámetro. Luego debes utilizar la clase importándola en otro fichero.
 
 Fichero fichero.py:
 
@@ -217,13 +217,13 @@ Contenido: Contenido cambiado!!! 2020-08-23
 
 Crea una clase llamada Listado con las siguientes funciones:
 
-- def __init__(self, fichero): recibe como parámetro el nombre de un fichero json cuyo contenido debe cargar en una lista llamada _datos que se definirá como atributo. El contenido debe ser una lista de diccionarios con el formato {"id": 1, "nombre": "Juan"}
+- `def __init__(self, fichero)`: recibe como parámetro el nombre de un fichero json cuyo contenido debe cargar en una lista llamada _datos que se definirá como atributo. El contenido debe ser una lista de diccionarios con el formato `{"id": 1, "nombre": "Juan"}`
 
-- def existe(self, nombre): debe devolver True/False si el nombre que se pasa como parámetro existe en la lista.
+- `def existe(self, nombre)`: debe devolver `True`/`False` si el nombre que se pasa como parámetro existe en la lista.
 
-- def aMinusculas(self): debe pasar todos los nombres de la lista a minúsculas.
+- `def aMinusculas(self)`: debe pasar todos los nombres de la lista a minúsculas.
 
-- def posicion(self, nombre): debe devolver la posición donde se encuentra ese nombre. Luego debes utilizar la clase importándola en otro fichero.
+- `def posicion(self, nombre)`: debe devolver la posición donde se encuentra ese nombre. Luego debes utilizar la clase importándola en otro fichero.
 
 Fichero listado.py:
 
@@ -309,15 +309,15 @@ Existe!
 
 Crea una clase llamada Tareas con las siguientes funciones:
 
-- def __init__(self): debe abrir el fichero llamado tareas.json y cargar en una lista los diccionarios que tendrán el siguiente formato: {id: 1, tarea: "Aprende algo"}. Esa lista será un atributo.
+- `def __init__(self)`: debe abrir el fichero llamado `tareas.json` y cargar en una lista los diccionarios que tendrán el siguiente formato: `{id: 1, tarea: "Aprende algo"}`. Esa lista será un atributo.
 
-- def crear(self, tarea): genera un nuevo objeto y lo guarda en la lista.
+- `def crear(self, tarea)`: genera un nuevo objeto y lo guarda en la lista.
 
-- def eliminar(self, id): elimina una tarea de la lista que tenga ese id.
+- `def eliminar(self, id)`: elimina una tarea de la lista que tenga ese id.
 
-- def guardar(self): guarda la lista en el fichero tareas.json.
+- `def guardar(self)`: guarda la lista en el fichero `tareas.json`.
 
-- def mostrar(self): devuelve todas las tareas en un string Luego debes utilizar la clase importándola en otro fichero.
+- `def mostrar(self)`: devuelve todas las tareas en un string Luego debes utilizar la clase importándola en otro fichero.
 
 Fichero tareas.py
 
@@ -405,19 +405,19 @@ Resultado:
 
 Crea una clase llamada Jugador que contenga lo siguiente:
 
-- def __init__(self, nombre, dorsal): asigna los parámetros a los atributos _nombre y _dorsal.
+- `def __init__(self, nombre, dorsal)`: asigna los parámetros a los atributos `_nombre` y `_dorsal`.
 
-- Métodos get/set para nombre y dorsal.
+- Métodos `get`/`set` para `nombre` y `dorsal`.
 
-- def info(self): devuelve un string con la información del jugador.
+- `def info(self)`: devuelve un string con la información del jugador.
 
 Crea una clase llamada Equipo que contenga lo siguiente:
 
-- def cargar(self): debe abrir un fichero llamado jugadores.json que contendrá una lista de diccionarios de jugador [{nombre: "Pele", dorsal: 10},{…},…]. Y debe crear por cada objeto del fichero una instancia de la clase Jugador y meterla en una lista llamado this._jugadores.
+- `def cargar(self)`: debe abrir un fichero llamado jugadores.json que contendrá una lista de diccionarios de jugador `[{nombre: "Pele", dorsal: 10},{…},…]`. Y debe crear por cada objeto del fichero una instancia de la clase `Jugador` y meterla en una lista llamado `this._jugadores`.
 
-- def mostrar(self): debe mostrar toda la lista de jugadores.
+- `def mostrar(self)`: debe mostrar toda la lista de jugadores.
 
-- def fichaje(self, nombre, dorsal): debe introducir un jugador nuevo en la lista, creando una instancia de Jugador. En la clase Equipo tendrás que importar la clase Jugador para poder utilizarla.
+- `def fichaje(self, nombre, dorsal)`: debe introducir un jugador nuevo en la lista, creando una instancia de `Jugador`. En la clase Equipo tendrás que importar la clase `Jugador` para poder utilizarla.
 
 Fichero jugador.py:
 
