--- a/md/13.md
+++ b/md/13.md
@@ -166,7 +166,7 @@ Miau, soy Lucifur
 
 ### 13.4.1 super()
 
-Cuando creas una subclase o una clase hija de otra, desde la clase que hereda puedes utilizar la función super() para llamar a funciones de la clase heredada.
+Cuando creas una subclase o una clase hija de otra, desde la clase que hereda puedes utilizar la función `super()` para llamar a funciones de la clase heredada.
 
 Por ejemplo, en el caso anterior, desde la subclase Cachorro podríamos añadir un constructor propio y también llamar al constructor de la super-clase Gato:
 
@@ -266,9 +266,9 @@ class Gato:
         print("Miau, soy", self.nombre)
 ```
 
-Observa que la propiedad nombre es ahora _nombre. Es una manera de expresar que esa propiedad es "privada", y que no se debería acceder a ella desde fuera de la clase.
+Observa que la propiedad nombre es ahora `_nombre`. Es una manera de expresar que esa propiedad es "privada", y que no se debería acceder a ella desde fuera de la clase.
 
-Ahora cuando usemos la clase Gato e intentemos acceder a la propiedad . nombre, se hará a través de esas nuevas funciones.
+Ahora cuando usemos la clase `Gato` e intentemos acceder a la propiedad `nombre`, se hará a través de esas nuevas funciones.
 
 ```Python
 miGato = Gato("Pixi")
@@ -279,7 +279,7 @@ miGato.maulla() # Miau, soy Pixel
 
 ### 13.5.1 Ejercicio 5.3
 
-Escribe un programa que defina la clase Vehiculo con el atributo matricula, con métodos get/set y otro método llamado arrancar. Crea una subclase llamada Coche que extienda la clase Vehículo con un constructor que recibe matricula, modelo y color, y una función llamada info que devuelva toda su información. Crea una instancia para probar la clase Coche.
+Escribe un programa que defina la clase `Vehiculo` con el atributo `matricula`, con métodos `get`/`set` y otro método llamado `arrancar`. Crea una subclase llamada `Coche` que extienda la clase Vehículo con un constructor que recibe `matricula`, `modelo` y `color`, y una función llamada `info` que devuelva toda su información. Crea una instancia para probar la clase `Coche`.
 
 ```Python
 class Vehiculo:
@@ -322,7 +322,7 @@ Arrancando 0042ASI
 
 ¿Qué ventaja puede tener la encapsulación? Básicamente que desde "fuera" no se pueda manipular la clase sin control. De ahí que sea como una caja negra, como una videoconsola. Si para jugar un juego tuvieras que abrirla y soldar las conexiones a mano probablemente te acabarías cargando la consola. Por eso los aparatos se diseñan como cajas negras, solo te permiten manipularlas desde fuera.
 
-En el caso de la clase Gato, no permitimos que el nombre se pueda cambiar directamente. A través de la función "setter" podemos controlar que el nombre que se quiera asignar sea correcto.
+En el caso de la clase `Gato`, no permitimos que el nombre se pueda cambiar directamente. A través de la función "setter" podemos controlar que el nombre que se quiera asignar sea correcto.
 
 13.6 Clases que contiene otras clases
 -------------------------------------
@@ -361,7 +361,7 @@ Los diseños pueden ser tan complejos como sea necesario para representar lo que
 
 ### 13.6.1 Ejercicio 5.4
 
-Escribe un programa que defina la clase Piloto con el atributo nombre y las funciones get/set. Crea también una clase llamada Aeroplano con el atributo modelo, piloto y copiloto, con funciones get/set para el modelo y otro método llamado volar. Crea una instancia para probar ambas clases.
+Escribe un programa que defina la clase `Piloto` con el atributo `nombre` y las funciones `get`/`set`. Crea también una clase llamada `Aeroplano` con el atributo `modelo`, `piloto` y `copiloto`, con funciones `get`/`set` para el modelo y otro método llamado `volar`. Crea una instancia para probar ambas clases.
 
 ```Python
 class Piloto:
@@ -421,7 +421,7 @@ alumno1 = Alumno("Gumball")
 
 ### 13.8.1 Ejercicio 5.0
 
-Escribe un programa que defina una clase llamada Instrumento. El constructor debe tener los parámetros nombre y tipo, que se asignarán a los atributos  _nombre y  _tipo respectivamente. Además debes añadir una función llamada tocar que simplemente sacará un mensaje y otra llamada info que devolver un texto con la información de los atributos. Crea una instancia de la clase y llama a sus funciones.
+Escribe un programa que defina una clase llamada `Instrumento`. El constructor debe tener los parámetros nombre y tipo, que se asignarán a los atributos `_nombre` y  `_tipo` respectivamente. Además debes añadir una función llamada `tocar` que simplemente sacará un mensaje y otra llamada `info` que devolver un texto con la información de los atributos. Crea una instancia de la clase y llama a sus funciones.
 
 ```Python
 class Instrumento:
@@ -450,7 +450,7 @@ Guitarra cuerda
 
 ### 13.8.2 Ejercicio 5.1
 
-Escribe un programa que defina una clase llamada NombreFormateado, con un constructor que recibe un nombre y un apellido y una función llamada formatear que debe devolver el nombre y el apellido en este formato: "Nombre Apellido", es decir con la primera letra en mayúscula, el resto en minúscula y separados por comas. Crea las funciones auxiliares que consideres oportunas.
+Escribe un programa que defina una clase llamada `NombreFormatead`o, con un constructor que recibe un nombre y un apellido y una función llamada `formatear` que debe devolver el nombre y el apellido en este formato: `"Nombre Apellido"`, es decir con la primera letra en mayúscula, el resto en minúscula y separados por comas. Crea las funciones auxiliares que consideres oportunas.
 
 ```Python
 class NombreFormateado:
@@ -483,7 +483,7 @@ Juan Pérez
 
 ### 13.8.3 Ejercicio 5.2
 
-Escribe un programa que defina una clase llamada Sumador, la cual se instancia con dos números. Incluye funciones get y set para ambos, y debes controlar que si se les intenta asignar un valor negativo se asigne 0. Además tendrán la función sumar que devolverá la suma de ambos números.
+Escribe un programa que defina una clase llamada `Sumador`, la cual se instancia con dos números. Incluye funciones `get` y `set` para ambos, y debes controlar que si se les intenta asignar un valor negativo se asigne `0`. Además tendrán la función sumar que devolverá la suma de ambos números.
 
 ```Python
 class Sumador:
@@ -534,7 +534,7 @@ Resultado:
 
 ### 13.8.4 Ejercicio 5.3
 
-Crea un programa con una clase llamada Moneda. La clase debe tener un constructor vacío y una única función llamado tirar cuyo resultado debe ser un string elegido al azar entre "cara" o "cruz". Crea una instancia de la clase para probarla.
+Crea un programa con una clase llamada `Moneda`. La clase debe tener un constructor vacío y una única función llamado `tirar` cuyo resultado debe ser un string elegido al azar entre `"cara"` o `"cruz"`. Crea una instancia de la clase para probarla.
 
 ```Python
 import random
@@ -568,15 +568,15 @@ cruz
 
 ### 13.8.5 Ejercicio 5.4
 
-Crea un programa con una clase llamada Dado para simular el comportamiento de un dado de N caras. Crea una instancia de la clase para probarla.
+Crea un programa con una clase llamada `Dado` para simular el comportamiento de un dado de N caras. Crea una instancia de la clase para probarla.
 
- - ​constructor def  _ _init _ _(self, lados, admiteCero=False): con el atributo lados: atributo que guarda el número de caras y el atributo admiteCero = False: atributo que nos dice si el dado puede devolver el valor 0. Por defecto vale False.
+ - `​constructor def  _ _init _ _(self, lados, admiteCero=False)`: con el atributo lados: atributo que guarda el número de caras y el atributo admiteCero = False: atributo que nos dice si el dado puede devolver el valor 0. Por defecto vale False.
 
- - ​setter def lados (self, lados) : función setter con parámetro, establece el atributo lados.
+ - `​setter def lados (self, lados)` : función setter con parámetro, establece el atributo lados.
 
- - ​setter def admiteCero (self, lados, admiteCero): función con parámetros, establece los dos atributos.
+ - `​setter def admiteCero (self, lados, admiteCero)`: función con parámetros, establece los dos atributos.
 
- - ​def tirar (self): función que simula el lanzamiento del dado y retorna un el resultado. Debe tener en cuenta al atributo admiteCero. Crea instancias que genere un dado de 6 caras, un dado de 10 caras y un dado de 20 que permita ceros, y haz 100 lanzamientos de cada uno:
+ - `​def tirar (self)`: función que simula el lanzamiento del dado y retorna un el resultado. Debe tener en cuenta al atributo admiteCero. Crea instancias que genere un dado de 6 caras, un dado de 10 caras y un dado de 20 que permita ceros, y haz 100 lanzamientos de cada uno:
 
 ```Python
 import random
@@ -634,11 +634,11 @@ Resultado:
 
 Crea un programa que contenga dos clases:
 
-*   Clase Jugador, que contiene los atributos nombre, puesto y dorsal. También tiene un constructor con todos esos parámetros y una función llamada informe que retorne todos los atributos.
-*   Clase Equipo, que contiene los atributos nombre, fundacion, presupuesto y una lista para guardar instancias de la clase Jugador. Debe tener un constructor con los atributos nombre, fundacion, presupuesto, sus get/set, una función informe y otras dos funciones:
+*   Clase `Jugador`, que contiene los atributos `nombre`, `puesto` y `dorsal`. También tiene un constructor con todos esos parámetros y una función llamada `informe` que retorne todos los atributos.
+*   Clase `Equipo`, que contiene los atributos `nombre`, `fundacion`, `presupuesto` y una lista para guardar instancias de la clase `Jugador`. Debe tener un constructor con los atributos `nombre`, `fundacion`, `presupuesto`, sus `get`/`set`, una función `informe` y otras dos funciones:
 
-*   def fichar(self, jugador) para añadir jugadores a la lista.
-*   def mostrarJugadores(self), para devolver una cadena con todos los datos de los jugadores Además, añade el código necesario para crear dos jugadores y un equipo, al que añadirás los jugadores y los mostrarás.
+*   `def fichar(self, jugador)` para añadir jugadores a la lista.
+*   `def mostrarJugadores(self)`, para devolver una cadena con todos los datos de los jugadores Además, añade el código necesario para crear dos jugadores y un equipo, al que añadirás los jugadores y los mostrarás.
 
 ```Python
 class Jugador:
@@ -689,11 +689,11 @@ Beckenbauer Defensa 4
 
 Crea un programa que incluya una serie de clases.
 
- - 1 - Clase Dispositivo: tiene los atributos nombre, marca y precio. Un constructor usando los atributos, los set y get y una función toString mostrando los atributos.
+ - 1 - Clase `Dispositivo`: tiene los atributos `nombre`, `marca` y `precio`. Un constructor usando los atributos, los `set` y `get` y una función `toString` mostrando los atributos.
 
- - 2 - Clase Movil: es una subclase de Dispositivo, hay que añadir el atributo numero. Crea el constructor y el método def toString (self) aprovechando los de la superclase. Añade la función def llamar (self, numero), que saque por pantalla una cadena diciendo "llamando numero".
+ - 2 - Clase `Movil`: es una subclase de `Dispositivo`, hay que añadir el atributo numero. Crea el constructor y el método `def toString (self)` aprovechando los de la superclase. Añade la función `def llamar (self, numero)`, que saque por pantalla una cadena diciendo `"llamando numero"`.
 
- - 3 - Clase Ordenador: es una subclase de Dispositivo, hay que añadir el atributo procesador. Crea el constructor y la función def toString (self) aprovechando los de la superclase Además, añade el código necesario para crear un móvil y un ordenador y los muestras.
+ - 3 - Clase `Ordenador`: es una subclase de `Dispositivo`, hay que añadir el atributo `procesador`. Crea el constructor y la función `def toString (self)` aprovechando los de la superclase Además, añade el código necesario para crear un móvil y un ordenador y los muestras.
 
 ```Python
 class Dispositivo:
@@ -772,17 +772,17 @@ Teléfono Chanmhung 434.4 665745345
 
 Vamos a crear el proyecto Caperucita en el que la protagonista gestiona una Cesta de comida. La comida será de varios tipos. Estas son las clases que se deben hacer,
 
- - 1 - Clase Comida: tiene los atributos nombre y peso. Un constructor usando los atributos, los set y get y una función toString mostrando los atributos.
+ - 1 - Clase `Comida`: tiene los atributos `nombre` y `peso`. Un constructor usando los atributos, los `set` y `get` y una función `toString` mostrando los atributos.
 
- - 2 - Clase Fruta: es una subclase de Comida, y hay que añadir el atributo vitamina. Crea el constructor y la función toString aprovechando los de la superclase.
+ - 2 - Clase `Fruta:` es una subclase de `Comida`, y hay que añadir el atributo `vitamina`. Crea el constructor y la función `toString` aprovechando los de la superclase.
 
- - 3 - Clase Caramelo: es una subclase de Comida y hay que añadir el atributo calorias. Crea el constructor y la funciñon toString aprovechando los de la superclase.
+ - 3 - Clase `Caramelo`: es una subclase de `Comida` y hay que añadir el atributo `calorias`. Crea el constructor y la funciñon `toString` aprovechando los de la superclase.
 
- - 4 - Clase Cesta, tiene un atributo llamado alimentos que es un array de elementos tipo Comida (Fruta o Caramelo). Se inicia en el constructor. Tiene tres funciones:
+ - 4 - Clase `Cesta`, tiene un atributo llamado alimentos que es un array de elementos tipo `Comida` (`Fruta` o `Caramelo`). Se inicia en el constructor. Tiene tres funciones:
 
-*   def meterComida(self, comida) para meter una comida en la cesta,
-*   def pesoTotal(self) devuelve el peso total de la comida de la cesta.
-*   def toString(self) para mostrar toda la comida de la cesta. Además, añade el código necesario para crear instancias de Fruta, Caramelo y añádelos a la instancia de Cesta.
+*   `def meterComida(self, comida)` para meter una comida en la cesta,
+*   `def pesoTotal(self)` devuelve el peso total de la comida de la cesta.
+*   `def toString(self)` para mostrar toda la comida de la cesta. Además, añade el código necesario para crear instancias de `Fruta`, `Caramelo` y añádelos a la instancia de `Cesta`.
 
 ```Python
 class Comida:
@@ -902,7 +902,7 @@ Gumball
 
 ### 13.7.1 Ejercicio 5.5
 
-Escribe un programa que defina una clase llamada Numero y una función estática llamado aleatorio(max). Esta función debe devolver un número dentro del intervalo 0 y max.
+Escribe un programa que defina una clase llamada `Numero` y una función estática llamado `aleatorio(max)`. Esta función debe devolver un número dentro del intervalo `0` y `max`.
 
 ```Python
 import random
