--- a/md/17.md
+++ b/md/17.md
@@ -248,6 +248,8 @@ deactivate
 
 El libro termina aquí pero la Aventura de aprendera programar y de crear nuevos proyectos acaba de empezar. Hay infinidad de problemas para resolver y toda clase de herramientas para que puedas elegir la que más te guste.
 
+[//]: # (Yet another comment)
+
 ¡Te animamos a que sigas descubriendo más!
 
 ![](e20514ca-a096-442d-8ee5-3f2997bc2ec72106301532469382130.025.png)
