--- a/md/03.md
+++ b/md/03.md
@@ -42,13 +42,13 @@ En Python solo se añaden espacios o tabulaciones para indicar que el código es
 Escribe un programa que muestre por pantalla tu nombre.
 
 ```Python
-print("Hola soy Ada")
+print("Kaixo, Ada naiz")
 ```
 
 Resultado:
 
 ```console
-Hola soy Ada
+Kaixo, Ada naiz
 ```
 
 ¡OJO!
@@ -56,7 +56,7 @@ Hola soy Ada
 En el lenguaje Python es muy importante que no utilices tabulaciones o espacios al principio de la línea (salvo que utilices bloques que veremos en los siguientes capítulos). Esto, daría un error:
 
 ```Python
-   print("¡Hola mundo!")
+   print("Kaixo Mundua!")
 ```
 
 3.2  Comentarios
@@ -65,17 +65,17 @@ En el lenguaje Python es muy importante que no utilices tabulaciones o espacios 
 En un programa, se pueden poner comentarios. Se trata de texto que no se ejecuta y que el ordenador ignora completamente. ¿para qué se utiliza? Generalmente los comentarios se utilizan para explicar determinadas partes del programa.
 
 ```Python
-# Este programa dice Hola
-print("Hola")
+# Programa honek Kaixo esaten du
+print("Kaixo")
 ```
 
 Python ignora el comentario y mostrará Hola por pantalla. También se pueden hacer comentarios de varias líneas:
 
 ```Python
 """
-Este es un programa Python
-creado por Ada
-y revisado por Neko
+Hau Python programa bat da
+Adak sortuta
+eta Nekok aztertuta
 """
 ```
 
