--- a/md/04.md
+++ b/md/04.md
@@ -8,13 +8,13 @@ Las variables sirven para guardar datos. Los programas de ordenador se dedican, 
 Para definir una variable en python basta con indicar su nombre y darla algún valor. Por ejemplo:
 
 ```Python
-nombre = "Ada"
+izena = "Ada"
 ```
 
 Acabamos de crear una variable que contiene el valor "Ada". "Ada" es un dato, y es de tipo texto. Ahora podemos mostrar el valor de esa variable por la pantalla:
 
 ```Python
-print(nombre)
+print(izena)
 ```
 
 Que por pantalla sería:
@@ -26,10 +26,10 @@ Ada
 En cualquier momento, podríamos cambiar el valor de esa variable:
 
 ```Python
-nombre = "Ada"
-print(nombre)
-nombre = "Neko"
-print(nombre)
+izena = "Ada"
+print(izena)
+izena = "Neko"
+print(izena)
 ```
 
 Y por pantalla veríamos:
@@ -51,17 +51,17 @@ También se puede mostrar el contenido de una variable como parte del mensaje. E
 Basta con intercalar las variables y el texto con comas:
 
 ```Python
-nombre = "Bug"
-edad = 10
-print("Hola, me llamo", nombre)
-print("Soy", nombre, "tengo", edad, "años")
+izena = "Bug"
+adina = 10
+print("Kaixo nire izena", nombre, "da")
+print(nombre,"naiz", edad, "urte ditut")
 ```
 
 Que por pantalla sería:
 
 ```console
-Hola, me llamo Bug
-Soy Bug tengo 10 años
+Kaixo nire izena Bug da
+Bug naiz, 10 urte ditut
 ```
 
 ### 4.1.2    ¡Ahora tú! Ejercicio 0.1
@@ -69,18 +69,16 @@ Soy Bug tengo 10 años
 Crea dos variables nombre y edad y muestra su valor por pantalla.
 
 ```Python
-nombre = "Ada"
-edad = 14
-print("Tu nombre es", nombre, ", tienes", edad, "años")
-
-# Alternativa:
-# print("Tu nombre es %s, tienes %d años" % (nombre, edad))
+izena = "Ada"
+adina = 34
+print("Zure izena da", izena, ",", adina, "urte dituzu")
+# print("Zure izena da %s, %d urte dituzu" % (izena, adina))
 ```
 
 Resultado:
 
 ```console
-Tu nombre es Ada y tienes 14 años.
+Zure izena da Ada, 34 urte dituzu.
 ```
 
 ### 4.1.3    String de formato
@@ -88,17 +86,17 @@ Tu nombre es Ada y tienes 14 años.
 Otra forma de mostrar varias variables es con un mensaje que precedido de la letra f y las variables entre llaves:
 
 ```Python
-nombre = "Bug"
-edad = 10
-print(f"Hola, me llamo {nombre}")
-print(f"Soy {nombre} tengo {edad} años")
+izena = "Bug"
+adina = 10
+print(f"Kaixo nire izena {izena} da")
+print(f"{izena} naiz {adina} urte ditut")
 ```
 
 Que por pantalla sería:
 
 ```console
-Hola, me llamo Bug
-Soy Bug tengo 10 años
+Kaixo nire izena Bug da
+Bug naiz, 10 urte ditut
 ```
 
 ¡OJO!
@@ -110,26 +108,26 @@ Soy Bug tengo 10 años
 Otra alternativa para mostrar variables por pantalla: se crea un mensaje donde los elementos %s son sustituidos por variables.
 
 ```Python
-print("Hola, me llamo %s" % nombre)
+print("Kaixo nire izena %s da" % izena)
 ```
 
 Que por pantalla sería:
 
 ```console
-Hola, me llamo Ada
+Kaixo nire izena Bug da
 ```
 
 Puedes hacer lo mismo con varias variables
 
 ```Python
-nombre = "Neko"
-edad = 5
+izena = "Neko"
+izena = 5
 
-print("Hola, me llamo %s y tengo %d años" % (nombre, edad))
+print("Kaixo, %s naiz eta %d urte ditut" % (izena, izena))
 ```
 
 Que por pantalla sería:
 
 ```console
-Hola, me llamo Neko y tengo 5 años
+Kaixo, Neko naiz eta 5 urte ditut
 ```
