--- a/md/05.md
+++ b/md/05.md
@@ -17,22 +17,22 @@ Se trata de todos los tipos de números:
 *   Enteros: 1, 2, 3, 4,...
 
 ```Python
-contador = 10
-edad = 12
+nota = 10
+adina = 12
 ```
 
 *   Con decimales: Los números con decimales se expresan utilizando un . para separar la parte entera de la decimal, como 4.5 o 3.1415. Es probable que en clase de mates utilices una coma para separar las decimales, pero en programación se usa el formato inglés y debemos usar un ..
 
 ```Python
-peso = 34.67
-precio = 242.9943
+pisua = 34.67
+prezioa = 242.9943
 ```
 
 - Negativos: Los números menores que 0 se expresan con un guión por delante: -4, -5, -3.1415,...
 
 ```Python
 nota = -5
-temperaturaEnMarte = -50.676
+temperaturaMarten = -50.676
 ```
 
 5.2  Texto
@@ -43,10 +43,10 @@ temperaturaEnMarte = -50.676
 El texto, también llamados cadenas o strings son cualquier conjunto de palabras entre comillas dobles o simples.
 
 ```Python
-nombre = "Ada"
-frase = ""
-palabras = 'Voy a trabajar'
-novia = 'Solo quiero que seamos "amigos"'
+izena = "Ada"
+esaldiHutsa = ""
+hitzak = 'Lanera noa'
+esaldia = 'Soilik "Lagunak" izatea nahi dut'
 ```
 
 En el caso del texto, podemos meter una serie de caracteres especiales que nos permiten efectos interesantes. Esos caracteres se escriben con una contra-barra o backslash por delante:
@@ -54,35 +54,35 @@ En el caso del texto, podemos meter una serie de caracteres especiales que nos p
 - Salto de linea Esto añade un salto de línea al texto si este se muestra por pantalla:
 
 ```Python
-frase = "Hola,\n qué tal"
+esaldia = "Kaixo,\n zer moduz"
 ```
 
 se mostrará así:
 
 ```console
-Hola,
-qué tal
+Kaixo,
+zer moduz
 ```
 
 También se puede definir un texto de varias líneas así:
 
 ```Python
-cancion = """Era un domingo
-a la tarde
-fui a los coches
-de choque"""
+abestia = """Arotzak zuen
+alaba bat
+zan herriko
+xarmangarriena"""
 ```
 
 • Tabulaciones Esto añade una tabulación (varios espacios) al texto si este se muestra por pantalla:
 
 ```Python
-frase = "Nombre\tApellidotEdad"
+esaldia = "Izena\tAbizena\tAdina"
 ```
 
 se mostrará así:
 
 ```console
-Nombre  Apellido   
+Izena    Abizena    Adina
 ```
 
 Otros caracteres especiales:
@@ -103,9 +103,9 @@ Otros caracteres especiales:
 El tipo booleano solo puede tener dos valores posibles: True o False, es decir verdadero o false. Se trata de un tipo de dato fundamental en programación ya que se utiliza para tomar decisiones.
 
 ```Python
-terminado = False
-esMayor = True
-pythonMola = True
+bukatuta = False
+handiagoaDa = True
+pythonItzelaDa = True
 ```
 
 5.4  Listas
@@ -114,29 +114,29 @@ pythonMola = True
 Las listas son conjuntos de datos, que se definen de la siguiente manera:
 
 ```Python
-amigas = ["Ada", "Miranda", "Ruby"]
+lagunak = ["Ada", "Miranda", "Ruby"]
 ```
 
 Pueden ser de cualquier tipo, pero lo normal es que todos los elementos de una lista sean del mismo tipo:
 
 ```Python
-enemigas = []  # lista vacía
-edades = [12, 16, 30, 0, 22, 1, 1, 12]
-verdades = [True, False, False, True]
+etsaiak = []  # lista hutsa
+adinak = [12, 16, 30, 0, 22, 1, 1, 12]
+egiak = [True, False, False, True]
 ```
 
 Para poder referirnos a un valor concreto de la lista, tenemos que indicar la posición del elemento de la lista que nos interesa, empezando desde 0:
 
 ```Python
-nombres = ["Ada", "Neko", "Bug"]
-print(nombres[0])  # "Ada"
+izenak = ["Ada", "Neko", "Bug"]
+print(izenak[0])  # "Ada"
 ```
 
 En el caso de la lista nombres, las posiciones posibles serán 0, 1 y 2. ¡Pero ojo! si pasas una posición demasiado grande, el programa terminará con error:
 
 ```Python
-nombres = ["Ada", "Neko", "Bug"]
-print(nombres[4])  # ¡ERROR!
+izenak = ["Ada", "Neko", "Bug"]
+print(izenak[4])  # ¡ERROR!
 ```
 
 Volveremos sobre las listas y otras estructuras más adelante.
@@ -149,8 +149,8 @@ Volveremos sobre las listas y otras estructuras más adelante.
 Aunque suene un poco raro, en los programas a veces hay que tratar con algo que representa el vacío, la nada. Existe una palabra que nos permite representar la nada en Python, y esa es: None
 
 ```console
-valorInicial = None
-dato = None
+hasierakoBalioa = None
+datua = None
 ```
 
 En realidad no se suele utilizar para crear variables. None representa un valor en situaciones especiales. Por ejemplo, si se trata de sacar información de un sitio en el que no hay nada como un fichero, o un dato que el usuario no nos da.
@@ -160,19 +160,19 @@ En realidad no se suele utilizar para crear variables. None representa un valor 
 Escribe un programa que defina una variable de cada tipo visto aquí, y los muestre por la consola.
 
 ```Python
-nombre = "Ada"
-edad = 42
-peso = 101.54
-vivo = True
-riquezas = None
-amigas = ["Ada", "Ruby", "Miranda"]
+izena = "Ada"
+adina = 42
+pisua = 101.54
+bizirik = True
+dirua = None
+izenak = ["Ada", "Neko", "Bug"]
 
-print(nombre)
-print(edad)
-print(peso)
-print(vivo)
-print(riquezas)
-print(amigas)
+print(izena)
+print(adina)
+print(pisua)
+print(bizirik)
+print(dirua)
+print(izenak)
 ```
 
 Resultado:
