--- a/md/06.md
+++ b/md/06.md
@@ -8,21 +8,21 @@ Los programas básicos como los que estamos viendo de momento, utilizan la conso
 Para poder pedirle al usuario un dato y guardarlo en una variable, se utiliza la función input:
 
 ```Python
-nombre = input("Dime tu nombre: ")
-print("Hola ", nombre)
+izena = input("Zure izena idatzi: ")
+print("Kaixo ", izena)
 ```
 
 En la pantalla verías lo siguiente:
 
 ```console
-Dime tu nombre:
+Zure izena idatzi:
 ```
 
 La función input hace que el mensaje Dime tu nombre: aparezca en pantalla. También hace que el programa se pare a la espera de que el usuario escriba algo. Si el usuario escribe Rosa en la consola, se vería:
 
 ```console
-Dime tu nombre: Rosa
-Hola Rosa
+Zure izena idatzi: Amaia
+Kaixo Amaia
 ```
 
 ### 6.1.1    Ejercicio 0.3
@@ -30,18 +30,18 @@ Hola Rosa
 Escribe un programa que solicite un nombre al usuario y lo guarde en una variable. A continuación debe mostrar un saludo por consola.
 
 ```Python
-nombre = input("Introduce tu nombre: ")
-print("Hola, qué tal estás ", nombre)
+izena = input("Sartu zure izena: ")
+print("Kaixo, zer moduz zaude", izena)
 
-# Alternativa:
-# print("Hola, qué tal estás %s" % nombre)
+# Beste modu bat
+# print("Kaixo, zer moduz zaude %s" % izena)
 ```
 
 Resultado:
 
 ```console
-Introduce tu nombre: Juan
-Hola, qué tal estás Juan
+Sartu zure izena: Jon
+Kaixo, zer moduz zaude Jon
 ```
 
 6.2  Cuidado con los datos
@@ -50,15 +50,15 @@ Hola, qué tal estás Juan
 Cada vez que uses la función input para que el usuario escriba algo, sea lo que sea se guardará como texto. Aunque se escriba un número:
 
 ```Python
-valor = input("Dame un número: ")
-doble = valor + valor
-print(doble)
+balioa = input("Zenbaki bat eman: ")
+bikotiza = balioa + balioa
+print(bikotiza)
 ```
 
 Si el usuario introduce un número como 4 este sería el resultado:
 
 ```console
-Dame un número: 4
+Zenbaki bat eman: 4
 44
 ```
 
@@ -67,32 +67,32 @@ En lugar de sumar 4 + 4 y mostrar 8, lo que ha hecho es unir 4 y 4, porque en re
 Para evitarlo, tenemos que usar otra función para convertir ese dato en número entero: int()
 
 ```Python
-valor = input("Dame un número: ")
-doble = int(valor) + int(valor)
-print(doble)
+balioa = input("Zenbaki bat eman: ")
+bikotiza = int(balioa) + int(balioa)
+print(bikotiza)
 ```
 
 O incluso lo podemos convertir antes:
 
 ```Python
-valor = input("Dame un número: ")
-valor = int(valor)
-doble = valor + valor
-print(doble)
+balioa = input("Zenbaki bat eman: ")
+balioa = int(zenbakia)
+bikotiza = balioa + balioa
+print(bikotiza)
 ```
 
 O incluso aplicarlo a input:
 
 ```Python
-valor = int(input("Dame un número: "))
-doble = valor + valor
-print(doble)
+balioa = int(input("Zenbaki bat eman: "))
+bikotiza = balioa + balioa
+print(bikotiza)
 ```
 
 Ahora sí, la suma será numérica:
 
 ```console
-Dame un número: 4
+Zenbaki bat eman: 4
 8
 ```
 
@@ -101,10 +101,10 @@ Dame un número: 4
 Escribe un programa que solicite un número al usuario y le sume 10. A continuación debe mostrar el resultado por la consola. Recuerda que conviene hacer un int del valor introducido para convertirlo a número entero.
 
 ```Python
-valor = input("Introduce un número: ")
-resultado = int(valor) + 10
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) + 10
 
-print("La suma es:", resultado)
+print("Batura hau da:", emaitza)
 ```
 
 Resultado:
@@ -122,8 +122,8 @@ Aunque en el lenguaje no tengamos que declarar los tipos de variables, los tipos
 Por ejemplo si tenemos una variable que contiene un número, y la queremos concatenar en un texto, obtendríamos un error:
 
 ```Python
-valor = 66
-texto = "Mi edad es " + valor
+balioa = 66
+testua = "Nire adina da " + balioa
 ```
 
 El error sería:
@@ -135,8 +135,8 @@ TypeError: cannot concatenate 'str' and 'int' objects
 Para evitarlo, tenemos que forzar el tipo a texto con str():
 
 ```Python
-valor = 66
-texto = "Mi edad es " + str(valor)
+balioa = 66
+testua = "Nire adina da " + str(balioa)
 ```
 
 Por tanto, hay ocasiones en los que tendremos que convertir un valor en determinado tipo. Las funciones para convertir son las siguientes:
